# crxst

./: .pre-commit-config.yaml  Cargo.toml  README.md  codecov.yml  crx-update.sh  nothing.sh  op.env
.github/workflows/: codecov.yml
data/: .pre-commit-config.yaml  crx.yaml
src/: lib.rs  main.rs
