[package]
name = "crxst"
version = "0.1.0"
description = "Provides a CLI method to download Chrome Extensions and install them in a headless Chrome instance."
edition = "2021"
authors = ["Adam Smith, adam.smith@associates.gwe.cisa.dhs.gov"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
error-chain = "0.12.4"
libc = "0.2.155"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"]}
serde_yaml = "0.9.34"
tempfile = "3.10.1"
